--- a/pi/login.html
+++ b/pi/login.html
@@ -8,16 +8,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Unlock Pi</title>
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">  -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="bootstrap.css">
 
 
         <style>
-            body {
-                font-family: 'Roboto', sans-serif;
+            @import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap');
+            * {
+                font-family: "Mulish", sans-serif !important;
             }
+
             button {
-                font-family: 'Roboto', sans-serif;
+                font-family: "Mulish", sans-serif;
+            }
+            textarea::placeholder{
+               font-family: "Mulish", sans-serif;
+               font-size: 1.2rem;
             }
         </style>
 
@@ -52,7 +58,7 @@
 
 
         <div class="col-md-12">
-           <p style="text-align: center;">  <input type="submit" value="UNLOCK WITH PASSPHRASE" style="padding: 8px 8px; border: 1.22px solid #703D92; border-radius: 7px; background: transparent; width: 90%; font-size: 13px;  color: #8638C2; font-weight:320;</strong></button></p>
+           <p style="text-align: center; background-color: #703D92;color: white; width: 80%; margin: 0 auto;border-radius: 10px;">  <input type="submit" value="UNLOCK WITH PASSPHRASE" style="padding: 8px 8px; border: 1.22px solid #703D92; color: white; background-color: #703D92;  border-radius: 7px; background: transparent; width: 90%; font-size: 13px;  font-weight:320;"></strong></button></p>
         </div>
 
 
@@ -60,7 +66,6 @@
 
         <div class="col-md-12 mt-4">
         <!-- <p style="color: red; display: none;">Please use passphrase</p> -->
-           <p style="text-align: center;"> <button  style="text-align: center; padding: 8px 8px; border-radius: 7px; color: white; border: none; background: #703D92; width: 90%; font-size: 13px; font-weight: 320;">UNLOCK WITH BIOMETRICS</button></p>
 
 		   </form>
 
@@ -71,8 +76,8 @@
             <p class="text-center" style="color: #0A08C2;"><strong>Unlock a Developer App Wallet</strong></p>
         </div> -->
 
-        <div class="col-md-12 mt-2" style="padding: 8px 28px 28px 28px; justify-content: center;">
-            <p style=" width: 100%; font-size: 14px; ;">As a non-custodial wallet, your wallet passphrase is
+        <div class="" style=" justify-content: start;">
+            <p style=" width: 100%; font-size: 14px;text-align: start ;">As a non-custodial wallet, your wallet passphrase is
                 exclusively accessible only to you. Recovery of passphrase
                 is currently impossible.<br><br>
                 Lost your passphrase? <a href="#" style="color: #0A08C2;">You can create a new wallet,</a> but all your π
